--- a/app/src/main/res/layout/irv_restaurantes_clientes.xml
+++ b/app/src/main/res/layout/irv_restaurantes_clientes.xml
@@ -32,11 +32,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5sp">
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -56,7 +57,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="2sp"
+                        android:layout_marginTop="2dp"
                         android:fontFamily="sans-serif-condensed-medium"
                         android:text="AtentionHour"
                         android:textAppearance="?attr/textAppearanceBodyMedium"
@@ -65,20 +66,15 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2sp"
-                    android:orientation="horizontal">
+
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/go_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="45sp"
+                        android:layout_marginStart="45dp"
                         android:text="Go"
                         app:backgroundTint="@color/light_green" />
-                </LinearLayout>
             </LinearLayout>
 
 
