--- a/app/src/main/res/layout/activity_cliente_perfil.xml
+++ b/app/src/main/res/layout/activity_cliente_perfil.xml
@@ -74,101 +74,108 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+           <com.google.android.material.card.MaterialCardView
+               android:layout_width="0dp"
+               android:layout_weight="1"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="10dp"
+               android:layout_marginTop="16dp"
+               android:layout_marginRight="10dp"
+               android:layout_marginBottom="4dp"
+               app:cardCornerRadius="8dp"
+               app:cardElevation="4dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/light_green"
-                    android:paddingStart="16dp"
-                    android:paddingTop="2dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="2dp"
-                    android:text="@string/nombre"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                   <com.google.android.material.textview.MaterialTextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:background="@color/light_green"
+                       android:paddingStart="16dp"
+                       android:paddingTop="2dp"
+                       android:paddingEnd="10dp"
+                       android:paddingBottom="2dp"
+                       android:text="@string/nombre"
+                       android:fontFamily="sans-serif-condensed-medium"
+                       android:textColor="@color/white"
+                       android:textSize="16sp"
+                       android:textStyle="bold"/>
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/baseline_person_24"
-                    android:drawablePadding="10dp"
-                    android:paddingStart="16dp"
-                    android:paddingTop="6dp"
-                    android:paddingEnd="16dp"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:paddingBottom="6dp"
-                    android:text="Emma"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                   <com.google.android.material.textview.MaterialTextView
+                       android:id="@+id/name"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:drawablePadding="10dp"
+                       android:paddingStart="16dp"
+                       android:paddingTop="6dp"
+                       android:paddingEnd="16dp"
+                       android:fontFamily="sans-serif-condensed-medium"
+                       android:paddingBottom="6dp"
+                       android:text="Hineill David"
+                       android:textColor="@color/black"
+                       android:textSize="18sp" />
 
-            </LinearLayout>
+               </LinearLayout>
 
-        </com.google.android.material.card.MaterialCardView>
+           </com.google.android.material.card.MaterialCardView>
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp">
+           <com.google.android.material.card.MaterialCardView
+               android:layout_width="0dp"
+               android:layout_weight="1"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="10dp"
+               android:layout_marginTop="16dp"
+               android:layout_marginRight="10dp"
+               android:layout_marginBottom="4dp"
+               app:cardCornerRadius="8dp"
+               app:cardElevation="4dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/light_green"
-                    android:paddingStart="16dp"
-                    android:paddingTop="2dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="2dp"
-                    android:text="Apellidos"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
+                   <com.google.android.material.textview.MaterialTextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:background="@color/light_green"
+                       android:paddingStart="16dp"
+                       android:paddingTop="2dp"
+                       android:paddingEnd="10dp"
+                       android:paddingBottom="2dp"
+                       android:text="Apellidos"
+                       android:fontFamily="sans-serif-condensed-medium"
+                       android:textColor="@color/white"
+                       android:textSize="16sp"
+                       android:textStyle="bold"/>
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/lastName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/baseline_person_24"
-                    android:drawablePadding="10dp"
-                    android:paddingStart="16dp"
-                    android:paddingTop="6dp"
-                    android:paddingEnd="16dp"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:paddingBottom="6dp"
-                    android:text="Césédes Espinoza"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                   <!-- android:drawableStart="@drawable/baseline_person_24"-->
 
-            </LinearLayout>
+                   <com.google.android.material.textview.MaterialTextView
+                       android:id="@+id/lastName"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:drawablePadding="10dp"
+                       android:paddingStart="16dp"
+                       android:paddingTop="6dp"
+                       android:paddingEnd="16dp"
+                       android:fontFamily="sans-serif-condensed-medium"
+                       android:paddingBottom="6dp"
+                       android:text="Césédes Espinoza"
+                       android:textColor="@color/black"
+                       android:textSize="18sp" />
 
-        </com.google.android.material.card.MaterialCardView>
+               </LinearLayout>
+
+           </com.google.android.material.card.MaterialCardView>
+       </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
@@ -203,7 +210,6 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/baseline_person_24"
                     android:drawablePadding="10dp"
                     android:paddingStart="16dp"
                     android:paddingTop="6dp"
@@ -217,6 +223,131 @@
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="4dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_green"
+                    android:paddingStart="16dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="2dp"
+                    android:text="Teléfono"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/cellphone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/baseline_edit_24"
+                    android:drawablePadding="10dp"
+                    android:paddingStart="16dp"
+                    android:paddingTop="6dp"
+                    android:paddingEnd="16dp"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:paddingBottom="6dp"
+                    android:text="998394930"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="4dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_green"
+                    android:paddingStart="16dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="2dp"
+                    android:text="Ubicaciones"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/mainLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/read_more_24px"
+                    android:drawablePadding="10dp"
+                    android:paddingStart="16dp"
+                    android:paddingTop="6dp"
+                    android:paddingEnd="16dp"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:paddingBottom="6dp"
+                    android:text="Av. Abancay 345"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/saveButton"
+                style="@style/Widget.Material3.Button.ElevatedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_green"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Guardar"
+                android:textColor="@color/white"/>
+            <Button
+                android:id="@+id/cancelButton"
+                style="@style/Widget.Material3.Button.ElevatedButton"
+                android:layout_marginStart="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/red"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Cancelar"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
 
 
     </LinearLayout>
