--- a/app/src/main/res/layout/activity_repartidor_vista_home.xml
+++ b/app/src/main/res/layout/activity_repartidor_vista_home.xml
@@ -49,7 +49,7 @@
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/light_green"
                 android:contentDescription="Notificaciones"
-                android:onClick="vistaNotificaciones"
+                android:onClick="verNotificacionesRepartidor"
                 app:srcCompat="@drawable/notifications_24px"
                 app:tint="@color/white" />
 
