--- a/app/src/main/res/layout/activity_repartidor_notificaciones.xml
+++ b/app/src/main/res/layout/activity_repartidor_notificaciones.xml
@@ -10,13 +10,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="-20sp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:orientation="horizontal">
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5sp"
+                android:layout_marginTop="10sp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/icons8_izquierda_circulo_48"
+                android:onClick="retroceder"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,7 +41,7 @@
                 android:layout_height="50sp"
                 android:scaleType="centerCrop"
                 android:layout_marginTop="15sp"
-                android:layout_marginStart="135sp"
+                android:layout_marginStart="90sp"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
