--- a/app/src/main/res/layout/activity_repartidor_notificaciones.xml
+++ b/app/src/main/res/layout/activity_repartidor_notificaciones.xml
@@ -6,25 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Repartidor.RepartidorNotificaciones">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="820sp"
+        app:layout_constraintTop_toTopOf="@+id/padre"
+        app:menu="@menu/cliente_menu" />
 
     <LinearLayout
+        android:id="@+id/padre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="-20sp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="5sp"
                 android:layout_marginTop="10sp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/icons8_izquierda_circulo_48"
-                android:onClick="retroceder"/>
+                android:onClick="retroceder"
+                android:src="@drawable/icons8_izquierda_circulo_48" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -39,17 +54,19 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="50sp"
                 android:layout_height="50sp"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="15sp"
                 android:layout_marginStart="90sp"
+                android:layout_marginTop="15sp"
+                android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="400sp"
-            android:layout_height="750sp"
+            android:layout_height="500sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            />
+            android:layout_marginTop="15dp" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
