--- a/app/src/main/res/layout/irv_repartidor_pedido.xml
+++ b/app/src/main/res/layout/irv_repartidor_pedido.xml
@@ -83,7 +83,7 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginTop="18sp"
                 android:contentDescription="Mapa"
-                android:onClick="verRepartidorVerMapaPedido"
+                android:onClick="verDetalleMapaPedido"
                 app:backgroundTint="@color/md_theme_secondary"
                 app:srcCompat="@drawable/mapa_icon_icon"
                 app:tint="@color/white" />
