--- a/app/src/main/res/layout/irv_repartidor_pedido.xml
+++ b/app/src/main/res/layout/irv_repartidor_pedido.xml
@@ -121,7 +121,7 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginTop="18sp"
                 android:contentDescription="Aceptar"
-                android:onClick="verRepartidorConfirmacionTomarPedido"
+                android:onClick="aceptacionRepartidor"
                 app:backgroundTint="@color/md_theme_secondary"
                 app:srcCompat="@drawable/check_circle_24px"
                 app:tint="@color/white" />
