--- a/app/src/main/res/layout/activity_repartidor_tracking_estado_recibido.xml
+++ b/app/src/main/res/layout/activity_repartidor_tracking_estado_recibido.xml
@@ -8,8 +8,17 @@
     tools:context=".Repartidor.RepartidorTrackingEstadoRecibido">
 
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="820sp"
+        app:layout_constraintTop_toTopOf="@+id/padre"
+        app:menu="@menu/cliente_menu" />
 
     <LinearLayout
+        android:id="@+id/padre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -43,7 +52,7 @@
                 android:layout_marginStart="8sp"
                 android:scaleType="centerCrop"
                 android:layout_marginTop="15sp"
-                android:onClick="verRepartidorTrackingEstadoEnPreparacion"
+                android:onClick="verSiguienteTracking"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
