--- a/app/src/main/res/layout/activity_repartidor_tracking_finalizado.xml
+++ b/app/src/main/res/layout/activity_repartidor_tracking_finalizado.xml
@@ -62,16 +62,13 @@
             android:gravity="center"
             android:text="Volver a la lista de pedidos"
             android:textColor="@color/white"
-            android:onClick="verListaPedidosPosibles"
+            android:onClick="verListaPrincipal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.868" />
-
-
-
 
     </LinearLayout>
 
