--- a/app/src/main/res/layout/activity_repartidor_vista_home.xml
+++ b/app/src/main/res/layout/activity_repartidor_vista_home.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25sp"
+                android:layout_marginStart="20sp"
                 android:layout_marginTop="8sp"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:text="DeliGO"
@@ -34,7 +34,7 @@
                 style="?attr/floatingActionButtonSmallStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="82sp"
+                android:layout_marginStart="87sp"
                 android:layout_marginTop="15sp"
                 android:backgroundTint="@color/light_green"
                 android:onClick="verHistorialRepartidor"
@@ -60,6 +60,7 @@
                 android:layout_marginStart="8sp"
                 android:layout_marginTop="15sp"
                 android:scaleType="centerCrop"
+                android:onClick="verPerfil"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
 
@@ -75,7 +76,7 @@
              android:text="Solicitudes"
              /> -->
         <TextView
-            android:layout_width="350sp"
+            android:layout_width="390sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20sp"
@@ -95,7 +96,7 @@
                 android:layout_width="80sp"
                 android:layout_height="35sp"
                 android:layout_marginStart="18sp"
-                android:layout_marginTop="8sp"
+                android:layout_gravity="center_vertical"
                 android:backgroundTint="@color/light_green"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:paddingLeft="-5sp"
@@ -108,7 +109,7 @@
                 android:layout_width="80sp"
                 android:layout_height="35sp"
                 android:layout_marginStart="5sp"
-                android:layout_marginTop="8sp"
+                android:layout_gravity="center_vertical"
                 android:backgroundTint="@color/light_green"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:paddingLeft="-5sp"
@@ -130,9 +131,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lista"
+            android:layout_marginTop="5sp"
             android:layout_width="match_parent"
-            android:layout_marginTop="15sp"
-            android:layout_height="550sp"
+            android:layout_height="580sp"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
         </androidx.recyclerview.widget.RecyclerView>
