--- a/app/src/main/res/layout/activity_repartidor_tracking_estado_recibido.xml
+++ b/app/src/main/res/layout/activity_repartidor_tracking_estado_recibido.xml
@@ -23,6 +23,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
+            android:layout_marginTop="-15sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
@@ -31,7 +32,7 @@
                 android:layout_marginStart="5sp"
                 android:layout_marginTop="15sp"
                 android:src="@drawable/icons8_izquierda_circulo_48"
-                android:onClick="RegresarCrearCuenta2"
+                android:onClick="retroceder"
                 />
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/noti_button"
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="240sp"
                 android:layout_marginTop="15sp"
-                android:onClick="vistaNotificaciones"
+                android:onClick="verNotificacionesRepartidor"
                 android:backgroundTint="@color/light_green"
                 android:contentDescription="Notificaciones"
                 app:srcCompat="@drawable/notifications_24px"
@@ -52,7 +53,7 @@
                 android:layout_marginStart="8sp"
                 android:scaleType="centerCrop"
                 android:layout_marginTop="15sp"
-                android:onClick="verSiguienteTracking"
+                android:onClick="verPerfil"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
@@ -60,7 +61,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:layout_marginTop="3sp"
             android:orientation="horizontal">
             <TextView
                 android:layout_marginTop="10sp"
@@ -89,9 +90,9 @@
 
         <ImageView
             android:layout_width="400sp"
-            android:layout_height="550sp"
+            android:layout_height="570sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:scaleType="centerCrop"
             android:src="@drawable/mapa" />
 
@@ -100,7 +101,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="390sp"
             android:layout_height="50sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="12sp"
             android:background="@drawable/border_form"
             android:orientation="horizontal"
             >
@@ -119,8 +120,6 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:text=" Av. Antonio José de Sucre 499"/>
-
-
         </LinearLayout>
 
     </LinearLayout>
