--- a/app/src/main/res/layout/activity_super_admin_home.xml
+++ b/app/src/main/res/layout/activity_super_admin_home.xml
@@ -35,16 +35,15 @@
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
 
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="584dp"
-                android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/ly1"
+        android:layout_width="match_parent"
+        android:layout_height="310dp"
+        android:layout_marginTop="90dp"
+        android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView"
@@ -151,7 +150,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="387dp"
+                    android:layout_height="110dp"
                     android:layout_marginTop="16dp"
                     android:orientation="vertical">
 
@@ -217,25 +216,23 @@
                     </LinearLayout>
 
 
-
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/listClientesRecyler"
-                        android:layout_width="match_parent"
-                        android:layout_height="255dp"
-                        android:layout_margin="10dp" />
-
-
                 </LinearLayout>
 
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="400dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:id="@+id/listClientesRecyler"
+            android:layout_width="match_parent"
+            android:layout_height="280dp" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+            android:layout_marginTop="680dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_navigation_superadmin"
@@ -243,7 +240,9 @@
             tools:layout_editor_absoluteY="578dp" />
 
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+<!--
+
+
+-->
