--- a/app/src/main/res/layout/activity_super_admin_platillos_description.xml
+++ b/app/src/main/res/layout/activity_super_admin_platillos_description.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SuperAdminFragments.PlatillosDescription">
+    tools:context=".SuperAdmin.SuperAdminPlatillosDescription">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -148,7 +148,7 @@
                         android:paddingLeft="-5sp"
                         android:paddingRight="-5sp"
                         android:text="Ganancias"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         app:backgroundTint="@color/light_green" />
 
                     <com.google.android.material.button.MaterialButton
@@ -163,7 +163,7 @@
                         android:paddingRight="-5sp"
                         android:text="Carta"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         app:backgroundTint="@color/light_green" />
 
                     <com.google.android.material.button.MaterialButton
@@ -177,7 +177,7 @@
                         android:paddingLeft="-5sp"
                         android:paddingRight="-5sp"
                         android:text="Ventas"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         app:backgroundTint="@color/light_green" />
 
                     <com.google.android.material.button.MaterialButton
@@ -191,7 +191,7 @@
                         android:paddingLeft="-5sp"
                         android:paddingRight="-5sp"
                         android:text="Ubicación"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         app:backgroundTint="@color/light_green" />
 
                 </LinearLayout>
