--- a/app/src/main/res/layout/activity_super_admin_restaurante_resumen.xml
+++ b/app/src/main/res/layout/activity_super_admin_restaurante_resumen.xml
@@ -37,10 +37,13 @@
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
 
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView
+
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="583dp"
+            android:layout_height="588dp"
+            android:layout_marginTop="90dp"
             android:fillViewport="true">
 
             <LinearLayout
@@ -536,16 +539,12 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="130dp"
+            android:layout_marginTop="680dp"
             app:layout_constraintBottom_toBottomOf="@id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_navigation_superadmin"
             tools:layout_editor_absoluteX="-14dp"
             tools:layout_editor_absoluteY="578dp" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
