--- a/app/src/main/res/layout/activity_super_admin_resturante_historial_ventas.xml
+++ b/app/src/main/res/layout/activity_super_admin_resturante_historial_ventas.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SuperAdminFragments.RestauranteHistorialVentas">
+    tools:context=".SuperAdmin.SuperAdminResturanteHistorialVentas">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -23,19 +23,19 @@
             app:title="@string/title"
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="162dp"
+        android:layout_marginTop="90dp"
+        android:orientation="vertical">
 
 
             <com.google.android.material.card.MaterialCardView
                 style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="411dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
                 android:layout_marginBottom="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,11 +125,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="525dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="2dp"
                 android:orientation="vertical">
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -195,109 +193,27 @@
                         app:backgroundTint="@color/light_green" />
 
                 </LinearLayout>
-
-                <ScrollView
-                    android:layout_width="400sp"
-                    android:layout_height="508dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="10sp"
-                    android:layout_marginEnd="10sp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/card1"
-                            style="?attr/materialCardViewElevatedStyle"
-                            android:layout_width="365sp"
-                            android:layout_height="130sp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.516"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="110sp"
-                                    android:layout_height="130sp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/bembos_logo" />
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:padding="10dp">
-
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:orientation="horizontal"
-                                        android:padding="5sp">
-
-                                        <TextView
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_weight="1"
-                                            android:fontFamily="sans-serif-condensed"
-                                            android:text="#55"
-                                            android:textAppearance="?attr/textAppearanceTitleMedium"
-                                            android:textColor="@color/light_green" />
-
-                                        <TextView
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:fontFamily="sans-serif-condensed"
-                                            android:text="23/09/24 - 19:00"
-                                            android:textAppearance="?attr/textAppearanceTitleMedium" />
-                                    </LinearLayout>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:drawableLeft="@drawable/baseline_fmd_good_24"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Dirección: Av.Urumbamba"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:drawableLeft="@drawable/baseline_money_24"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Monto: $/125.30"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:onClick="vistaVentasDetails"
-                                        android:text="  Ver detalle del pedido"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                                        android:textColor="@color/light_green"
-                                        android:textColorHighlight="@color/light_green" />
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </com.google.android.material.card.MaterialCardView>
-
-
-
-                    </LinearLayout>
-
-
-                </ScrollView>
-
             </LinearLayout>
         </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerVentas"
+        android:layout_marginTop="250dp"
+        android:layout_width="match_parent"
+        android:layout_height="428dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginTop="680dp"
+        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_superadmin"
+        tools:layout_editor_absoluteX="-14dp"
+        tools:layout_editor_absoluteY="578dp" />
+
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
