--- a/app/src/main/res/layout/activity_super_admin_vista_log_event.xml
+++ b/app/src/main/res/layout/activity_super_admin_vista_log_event.xml
@@ -24,16 +24,14 @@
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="739dp"
-            android:orientation="vertical">
+    </com.google.android.material.appbar.AppBarLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="739dp"
-                android:layout_marginTop="2dp"
-                android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_marginTop="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -54,31 +52,24 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="669dp"
-                    android:orientation="vertical">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/listLogs"
-                        android:layout_width="match_parent"
-                        android:layout_height="511dp"
-                        android:layout_margin="10dp" />
-
-                    <com.google.android.material.bottomnavigation.BottomNavigationView
-                        android:id="@+id/bottom_navigation"
-                        android:layout_width="match_parent"
-                        android:layout_height="130dp"
-                        app:layout_anchorGravity="bottom|center"
-                        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:menu="@menu/bottom_navigation_superadmin"
-                        tools:layout_editor_absoluteX="-14dp"
-                        tools:layout_editor_absoluteY="578dp" />
-                </LinearLayout>
-
-            </LinearLayout>
         </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="170dp"
+        android:id="@+id/listLogs"
+        android:layout_width="match_parent"
+        android:layout_height="505dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginTop="678dp"
+        app:layout_anchorGravity="bottom|center"
+        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_superadmin"
+        tools:layout_editor_absoluteX="-14dp"
+        tools:layout_editor_absoluteY="578dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
