--- a/app/src/main/res/layout/irv_sup_admin_restaurant_list.xml
+++ b/app/src/main/res/layout/irv_sup_admin_restaurant_list.xml
@@ -8,6 +8,8 @@
         style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
