--- a/app/src/main/res/layout/activity_super_admin_historial_ventas_detalles.xml
+++ b/app/src/main/res/layout/activity_super_admin_historial_ventas_detalles.xml
@@ -65,8 +65,9 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="209dp"
+                    android:layout_width="215dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:layout_marginEnd="80dp"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical">
@@ -82,10 +83,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="2dp"
+                            android:fontFamily="sans-serif-condensed-medium"
                             android:text="Restaurante Bembos"
                             android:textColor="@color/black"
                             android:textSize="22sp"
-                            android:fontFamily="sans-serif-condensed-medium"
                             android:textStyle="bold" />
 
                         <TextView
@@ -93,25 +94,40 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="2dp"
                             android:text="Horario de atención: "
-                            android:textSize="12sp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_categorias"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="1dp"
-                            android:text="Categoría: "
-                            android:textSize="12sp"
+                            android:text="Categorías: "
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="1dp"
-                            android:text="Activado"
-                            android:textColor="@color/light_green"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Administrador"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="65dp"
+                                android:text="Activado"
+                                android:textColor="@color/light_green"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -205,9 +221,9 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardResumen"
         style="?attr/materialCardViewElevatedStyle"
-        android:layout_width="365sp"
+        android:layout_width="360sp"
         android:layout_height="125sp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="550dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
