--- a/app/src/main/res/layout/activity_super_admin_restaurante_platillos.xml
+++ b/app/src/main/res/layout/activity_super_admin_restaurante_platillos.xml
@@ -45,7 +45,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="98dp"
                 android:layout_marginTop="16dp"
                 android:gravity="center_horizontal|center_vertical"
@@ -67,8 +67,9 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="209dp"
+                    android:layout_width="215dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:layout_marginEnd="80dp"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical">
@@ -95,25 +96,40 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="2dp"
                             android:text="Horario de atención: "
-                            android:textSize="12sp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_categorias"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="1dp"
-                            android:text="Categoría: "
-                            android:textSize="12sp"
+                            android:text="Categorías: "
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="1dp"
-                            android:text="Activado"
-                            android:textColor="@color/light_green"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Administrador"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="65dp"
+                                android:text="Activado"
+                                android:textColor="@color/light_green"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -121,7 +137,6 @@
 
 
             </LinearLayout>
-
         </com.google.android.material.card.MaterialCardView>
 
 
