--- a/app/src/main/res/layout/activity_super_admin_restaurante_ubicacion.xml
+++ b/app/src/main/res/layout/activity_super_admin_restaurante_ubicacion.xml
@@ -66,8 +66,9 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="209dp"
+                        android:layout_width="215dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
                         android:layout_marginEnd="80dp"
                         android:gravity="center_horizontal|center_vertical"
                         android:orientation="vertical">
@@ -83,10 +84,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="2dp"
+                                android:fontFamily="sans-serif-condensed-medium"
                                 android:text="Restaurante Bembos"
                                 android:textColor="@color/black"
                                 android:textSize="22sp"
-                                android:fontFamily="sans-serif-condensed-medium"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -94,25 +95,40 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="2dp"
                                 android:text="Horario de atención: "
-                                android:textSize="12sp"
+                                android:textSize="14sp"
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/tv_categorias"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="1dp"
-                                android:text="Categoría: "
-                                android:textSize="12sp"
+                                android:text="Categorías: "
+                                android:textSize="14sp"
                                 android:textStyle="bold" />
 
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="1dp"
-                                android:text="Activado"
-                                android:textColor="@color/light_green"
-                                android:textSize="12sp"
-                                android:textStyle="bold" />
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Administrador"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="65dp"
+                                    android:text="Activado"
+                                    android:textColor="@color/light_green"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
 
                         </LinearLayout>
 
@@ -120,7 +136,6 @@
 
 
                 </LinearLayout>
-
             </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
